# futschik_project_2

./: .gitignore  README.md  changelog.txt
doc/: Schiffe_Versenken_NVS.tex
example_ship_setups/: example_ships1.toml  example_ships2.toml
project/: error_logs.txt  meson.build  meson_options.txt
project/include/: base64.h  game_master.h  player.h  ship.h
project/messages/: player_message.proto
project/src_client/: main_client.cpp
project/src_server/: game_master.cpp  main_server.cpp  player.cpp  ship.cpp
